[package]
name = "pdns"
version = "1.0.1"
edition = "2021"
authors = ["Gavin Spearhead"]
description = "Passive DNS"
license = "GPL-3.0-only"

[profile.release]
debug = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap ={ version = "2.1" }
byteorder = "1"
chrono = "0.4"
strum = "0.26"
strum_macros = "0.26"
clap = { version = "4.4", features = ["derive"] }
hex="0.4"
base64="0.22"
#libc="0.2"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
data-encoding = "2.5"
daemonize = "0.5"
regex = "1.10"
publicsuffix="2.2"
syslog = "7.0"
log = "0.4"
asn-db2="0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-rfc-5424 = "0.1"
snailquote = "0.3"
unic-idna = "0.9"
serde_with = "3.9.0"
signal-hook = "0.3.17"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
