[package]
name = "pdns"
version = "1.0.2"
edition = "2021"
authors = ["Gavin Spearhead"]
description = "Passive DNS"
license = "GPL-3.0-only"

[[bin]]
name = "pdns"
path = "src/main.rs"

[[bin]]
name = "dig"
path = "src/dig_main.rs"

[[bin]]
name = "dns_server"
path = "src/dns_server.rs"
[profile.dev]
debug = "full"


[profile.release]
debug = 0
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "2.2" }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
strum =  { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
data-encoding = "2.9"
daemonize = "0.5"
regex = "1.11"
publicsuffix="2.3"
log = "0.4"
asn-db2 = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-rfc-5424 = "0.1"
snailquote = "0.3"
unic-idna = "0.9"
serde_with = "3.12"
signal-hook = "0.3"
actix-web = "4.10"
vectorize = "0.2"
parking_lot = "0.12"
zerocopy = "0.8.25"
